--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,82 @@
 body {
+  color: black;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+  list-style: none;
+  /* overflow-x: hidden; */
+  /* offset: none; */
+  /* overflow: hidden; */
+  scroll-behavior: smooth;
+
+  width: 100vw;
+  text-decoration: none;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --color-bg: #1f1f38;
+  --color-bg-varient: navy;
+  --color-primary: rgb(0, 204, 255);
+  --color-white: white;
+
+  --container-width-lg: 75%;
+  --container-width-md: 86%;
+  --container-width-ms: 90%;
+
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  font-family: 'Times New Roman', Times, serif;
+  background-color: var(--color-bg);
+  color: var(--color-white);
+  line-height: 1.7;
+
+
+}
+
+
+/*****General style**/
+.container {
+  width: var(--container-width-lg);
+  margin: auto;
+}
+
+a {
+  color: var(--color-primary);
+  transition: all 400ms ease;
+  text-decoration: none;
+  -webkit-transition: all 400ms ease;
+  -moz-transition: all 400ms ease;
+  -ms-transition: all 400ms ease;
+  -o-transition: all 400ms ease;
+}
+
+a:hover {
+  color: white;
+
+}
+
+@media screen and(max-width:1024px) {
+  .container {
+    width: var(--container-width-md);
+  }
+
+  section {
+    margin-top: 6rem;
+  }
+
+ 
+}
+
+/* @media(max-width:600px){
+.container {
+    width: var(--container-width-sm);
+  }
+} */
