--- a/src/Components/Coins/coins.css
+++ b/src/Components/Coins/coins.css
@@ -1,23 +1,26 @@
 .coin-container {
-    box-sizing: border-box;
-   width:75%;
-   margin:auto;
+    box-sizing: content-box;
+    width: 75%;
+    margin: auto;
     max-width: 600px;
+   
+    
   
+
 }
 
 .coin-row {
     display: flex;
-   
+
     justify-content: space-between;
     gap: 2rem;
     padding: 0.5rem;
-   
-   
+
+
     height: 65px;
     border-bottom: 1px solid #d7d7d7;
-  
-   
+
+
 }
 
 .coin {
@@ -30,19 +33,18 @@
 .coin img {
     height: 40px;
     width: 40px;
-    margin-right:15px;
+    margin-right: 15px;
 }
 
-.coin div {
+.coin .sy_name {
     display: flex;
     flex-direction: column;
-   
-    
-    font-size:14px;
+
+    font-size: 14px;
     font-weight: 400;
     box-sizing: border-box;
 
-  
+
 }
 
 
@@ -57,27 +59,22 @@
 .coin-data {
     display: flex;
     flex-direction: column;
-  
-    align-items: flex-end;
+    box-sizing: border-box;
+    gap: 1px;
+
+    align-items:flex-end;
+    justify-content: center;
     padding-right: 3px;
+   
 }
 
 .coin-price {
-    /* width: 100px; */
-    margin-bottom: -0.8rem;
+   
+    margin-bottom:-1rem;
 }
 
-.coin-volume {
-    width: 230px;
-}
 
-.coin-marketcap {
-    width: 155px;
-}
 
-.coin-percent {
-    /* width: 100%; */
-}
 
 .red {
     color: #f00606;
@@ -87,12 +84,12 @@
     color: #11d811;
 }
 
-@media (max-width:600px){
+@media (max-width:600px) {
 
     .coin-container {
-           
-            width: 90%;
-           
-    
-        }
+
+        width: 90%;
+
+
+    }
 }
