--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -4,6 +4,7 @@
 
     box-sizing: border-box;
         width: 100%;
+        z-index: 100;
        
     /* display: flex;
     justify-content: center;
