--- a/src/Components/Market/marketnav.css
+++ b/src/Components/Market/marketnav.css
@@ -1,10 +1,18 @@
+
+.main_wrapper{
+position: fixed;
+    width: 100%;
+    top: 0px;
+    z-index: 3;
+    /* padding: 0 0.5rem; */
+    background-color: rgb(40, 26, 26);
+}
 .market_nav{
     
     max-width: 600px;
-    padding:0 0.5rem ;
     display: flex;
-    flex-direction: column;
-}
+  flex-direction: column;
+  }
 
 .top_nav{
     padding:0.5rem;
